add: command error messages